Missing sss_blur pass in EEVEE crashing indirect light bake #64806

Closed
opened 2019-05-18 18:36:46 +02:00 by Joseph Eagar · 8 comments
Member

System Information
Operating system: Win10
Graphics card: Nvidia 980gx

Blender Version
Broken: (example: 2.80, edbf15d3c0, master, 2018-11-28, as found on the splash screen) master

Short description of error
Load the following file and click "bake indirect lighting." It will crash in eevee_subsurface.c:EEVEE_subsurface_add_pass. "psl->sss_blur_ps" is NULL. If you add a simple "if (!psl->sss_blur_ps) return;" it won't crash; interestingly enough, the compiler optimizes out the entire function. Anyway, that probably isn't the right fix.

cycles room test.blend

Exact steps for others to reproduce the error
See above.

**System Information** Operating system: Win10 Graphics card: Nvidia 980gx **Blender Version** Broken: (example: 2.80, edbf15d3c044, master, 2018-11-28, as found on the splash screen) master **Short description of error** Load the following file and click "bake indirect lighting." It will crash in eevee_subsurface.c:EEVEE_subsurface_add_pass. "psl->sss_blur_ps" is NULL. If you add a simple "if (!psl->sss_blur_ps) return;" it won't crash; interestingly enough, the compiler optimizes out the entire function. Anyway, that probably isn't the right fix. [cycles room test.blend](https://archive.blender.org/developer/F7045666/cycles_room_test.blend) **Exact steps for others to reproduce the error** See above.
Author
Member

Added subscriber: @JosephEagar

Added subscriber: @JosephEagar

#64904 was marked as duplicate of this issue

#64904 was marked as duplicate of this issue
Brecht Van Lommel was assigned by Joseph Eagar 2019-05-18 18:37:40 +02:00
Brecht Van Lommel removed their assignment 2019-05-18 19:41:56 +02:00
Clément Foucault was assigned by Brecht Van Lommel 2019-05-18 19:41:56 +02:00

Added subscriber: @brecht

Added subscriber: @brecht

Added subscribers: @zanqdo, @Gvgeo-1

Added subscribers: @zanqdo, @Gvgeo-1

This issue was referenced by f7c9a33446

This issue was referenced by f7c9a334463c3f4c86c2bbc8f993bc93484c093e

Added subscriber: @Foaly

Added subscriber: @Foaly

This one seems to be a duplicate: #64858

It doesn't crash if
EEVEE_subsurface_cache_init(sldata, vedata);
is added in eevee_lightcache.c in eevee_lightbake_cache_create, for example in line 746.

I'm not sure if that's the right fix or if any cleanup is required additionally.

It's also odd that this is caused by the Clearcoat property of the principled shader; I don't see what that has to do with SSS.

This one seems to be a duplicate: #64858 It doesn't crash if `EEVEE_subsurface_cache_init(sldata, vedata);` is added in eevee_lightcache.c in eevee_lightbake_cache_create, for example in line 746. I'm not sure if that's the right fix or if any cleanup is required additionally. It's also odd that this is caused by the Clearcoat property of the principled shader; I don't see what that has to do with SSS.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64806
No description provided.