Fix T64806 Missing sss_blur pass in EEVEE crashing indirect light bake